[package]
name = "mcexternalrs"
version = "0.1.0"
edition = "2021"


[dependencies]
libmem = "4.4.0"
# procinfo = "0.4.2"
# sysinfo = "0.30.12"
# x11rb = "0.13.1"
# wayland-client = "0.31.2"
#[cfg(windows)]
# winapi = { version = "0.3.9", features = [
#   "winuser",
#   "processthreadsapi",
#   "handleapi",
#   "psapi",
# ] }
# wayland-protocols = "0.31.2"
